# farshid-mcp-imageProcessing

./: .gitignore  HOWTO.md  LICENSE  README.md  macosMCP.sh  pyproject.toml  requirements.txt  smoke_test.py  test_mcp_client.py  windowsMCP.bat
.github/workflows/: python-publish.yml
.mcp/: server.json
prompts/: cv.prompt.md
src/farshid_mcp_imageprocessing/: __init__.py  cv_helpers.py  server.py
